fixed mobile overflow

--- a/app/resources/private/assets/styles/modules/_menu.scss
+++ b/app/resources/private/assets/styles/modules/_menu.scss
@@ -6,7 +6,7 @@
   width: $menuWidth;
   min-height: calc(100% - #{$headerHeight});
   height: 100%;
-  overflow-y: auto;
+  // overflow-y: auto;
   
 	top: 0;
   left: 0;
